gitops/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo-pwa-production
  labels:
    app.kubernetes.io/part-of: todo-pwa
