gitops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-pwa
  namespace: todo-pwa-production
  labels:
    app.kubernetes.io/name: todo-pwa
    app.kubernetes.io/part-of: todo-pwa
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - todo-pwa.192.168.0.101.sslip.io
      secretName: todo-pwa-tls
  rules:
    - host: todo-pwa.192.168.0.101.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
